--- a/deploy-dev.yaml
+++ b/deploy-dev.yaml
@@ -3106,12 +3106,12 @@ components:
           pattern: "[\\u0000-\\u2FFF]+"
         type:
           type: string
-          description: "The field type. Supported filed types are:
+          description: "Supported field types are:
             <ul>
-              <li> text       </li>
-              <li> sensitive  </li>
-              <li> choice     </li>
-              <li> boolean    </li>
+              <li> <code>text</code>       </li>
+              <li> <code>sensitive</code>  </li>
+              <li> <code>choice</code>     </li>
+              <li> <code>boolean</code>    </li>
             </ul>"
           example: text
           pattern: "[\\u0000-\\u2FFF]+"
